--- a/app/assets/stylesheets/color.scss
+++ b/app/assets/stylesheets/color.scss
@@ -4,3 +4,5 @@ $gray: #555;
 $gray-darker: #222;
 $white: #fff;
 $green-light: rgba(18, 206, 162, 0.73);
+$red-light: #d91e1e;
+$red-strong: #ff0000;
