--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,9 +12,18 @@
 
   <body>
     <%= render "layouts/header" %>
+
     <div class="container">
-      <%= yield %>
-    </div>
+
+    <% flash.each do |msg_type, msg| %>
+    <div class="alert alert-<%= msg_type %>"><%= msg %></div>
+    <% end %>
+
+    <%= yield %>
+
     <%= render "layouts/footer" %>
+
+    <%= debug(params) if Rails.env.development? %>
+</div>
   </body>
 </html>
