--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,4 +1,4 @@
-<% provide :title, t ".title"  %>
+<% provide :title, t(".title")  %>
 <h1><%= t ".welcome" %></h1>
 <p>
   <%= t ".tutorial_help.intro" %>
