--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -3,5 +3,5 @@
   <h2>
     <%= t ".intro" %>
   </h2>
-  <%= link_to t ".signup", "#", class: "btn btn-primary btn-lg" %>
+  <%= link_to t(".signup"), signup_path, class: "btn btn-primary btn-lg" %>
 </div>
