--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,9 +1,8 @@
-
 <% provide :title, t(".title") %>
 <% provide :button_text, t(".submit") %>
 <h1><%= t ".header" %></h1>
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <%= render "form", url: signup_path %>
+    <%= render "form", url: @user %>
   </div>
 </div>
